Changed info from and in the JSON file what we need. Setup JSON so it actually works. Set up so the app gets data from local JSON. Set up so dashboard selector to display ned schedule information. Fixed bug, where last schedule entry could not be selected, and breaks panel.

--- a/dashboard/schedule.html
+++ b/dashboard/schedule.html
@@ -85,11 +85,11 @@
             <h5>Current Run Info</h5>
 
             <div class="layout vertical">
+                <!--These determine what we see in the dashboard.-->
                 <label-value label="Name"></label-value>
-                <label-value label="Console"></label-value>
-                <label-value label="Runners"></label-value>
-                <label-value label="Release Year"></label-value>
-                <label-value label="Estimate"></label-value>
+                <label-value label="Commentators"></label-value>
+                <label-value label="Roles"></label-value>
+                <label-value label="StartTime"></label-value>
                 <label-value label="Category"></label-value>
                 <label-value label="Order"></label-value>
             </div>
