--- a/dashboard/dialogs/edit-current-run.html
+++ b/dashboard/dialogs/edit-current-run.html
@@ -19,101 +19,40 @@
         <div class="flex layout vertical" style="margin-right: 8px;">
             <h5>General Run Info</h5>
             <paper-input type="text" label="Name"></paper-input>
-            <paper-input type="text" label="Release Year"></paper-input>
-            <paper-dropdown-menu label="Console">
-                <paper-listbox id="consoleListbox" class="dropdown-content" attr-for-selected="value">
-                    <paper-item value="Unknown">Unknown/None</paper-item>
-                    <paper-item value="3DS">3DS</paper-item>
-                    <paper-item value="ARC">Arcade</paper-item>
-                    <paper-item value="DC">Dreamcast</paper-item>
-                    <paper-item value="DS">DS</paper-item>
-                    <paper-item value="GB">Game Boy</paper-item>
-                    <paper-item value="GBA">Game Boy Advance</paper-item>
-                    <paper-item value="GBC">Game Boy Color</paper-item>
-                    <paper-item value="GCN">GameCube</paper-item>
-                    <paper-item value="GEN">Genesis</paper-item>
-                    <paper-item value="N64">Nintendo 64</paper-item>
-                    <paper-item value="NES">NES</paper-item>
-                    <paper-item value="PC">PC</paper-item>
-                    <paper-item value="PS1">PlayStation 1</paper-item>
-                    <paper-item value="PS2">PlayStation 2</paper-item>
-                    <paper-item value="PS3">PlayStation 3</paper-item>
-                    <paper-item value="PS4">PlayStation 4</paper-item>
-                    <paper-item value="PSP">PSP</paper-item>
-                    <paper-item value="SAT">Saturn</paper-item>
-                    <paper-item value="SNES">SNES</paper-item>
-                    <paper-item value="WII">Wii</paper-item>
-                    <paper-item value="WIIU">WiiU</paper-item>
-                    <paper-item value="WSHP">Wii Virtal Console</paper-item>
-                </paper-listbox>
-            </paper-dropdown-menu>
-            <paper-input type="text" label="Estimate"></paper-input>
+            <paper-input type="text" label="StartTime"></paper-input>
+            <!--Removed console dropdown-->
+            <paper-input type="text" label="Commentators"></paper-input>
+            <paper-input type="text" label="Roles"></paper-input>
             <paper-input type="text" label="Category"></paper-input>
         </div>
-
-        <!-- Right Column -->
-        <div id="runners" class="flex layout vertical justified" style="margin-left: 8px;"></div>
+        <!--Kasper: Removed runner-->
     </div>
 
     <script>
+        //Kasper: Removed runner, changed info to new info.
         var nameEl = document.querySelector('paper-input[label="Name"]');
-        var releaseYearEl = document.querySelector('paper-input[label="Release Year"]');
-        var consoleEl = document.getElementById('consoleListbox');
-        var estimateEl = document.querySelector('paper-input[label="Estimate"]');
+        var starttimeEl = document.querySelector('paper-input[label="StartTime"]');
+        var commentatorsEl = document.querySelector('paper-input[label="Commentators"]');
+        var rolesEl = document.querySelector('paper-input[label="Roles"]');
         var categoryEl = document.querySelector('paper-input[label="Category"]');
-        var runners = document.getElementById('runners');
 
         var currentRun = nodecg.Replicant('currentRun');
         currentRun.on('change', function(oldVal, newVal) {
             nameEl.value = newVal.name;
-            releaseYearEl.value = newVal.releaseYear;
-            consoleEl.select(newVal.console.toUpperCase());
-            estimateEl.value = newVal.estimate;
+            starttimeEl.value = newVal.starttime;
+            commentatorsEl.value = newVal.commentators;
+            rolesEl.value = newVal.roles;
             categoryEl.value = newVal.category;
-
-            // Remove all current edit-runner elements.
-            while (runners.firstChild) {
-                runners.removeChild(runners.firstChild);
-            }
-
-            // Add the new edit-runner element.
-            newVal.runners.forEach(function(runner, index) {
-                var editRunnerEl = document.createElement('edit-runner');
-                editRunnerEl.runner = runner;
-                editRunnerEl.index = index;
-                runners.appendChild(editRunnerEl);
-            })
         });
 
         document.addEventListener('dialog-confirmed', function() {
             currentRun.value.name = nameEl.value;
-            currentRun.value.releaseYear = releaseYearEl.value;
-            currentRun.value.console = consoleEl.selected;
-            currentRun.value.estimate = estimateEl.value;
+            currentRun.value.starttime = starttimeEl.value;
+            currentRun.value.commentators = commentatorsEl.selected;
+            currentRun.value.roles = rolesEl.value;
             currentRun.value.category = categoryEl.value;
 
-            var numRunners = currentRun.value.runners.length;
-            for (var i = 0; i < numRunners; i++) {
-                var editRunnerEl = document.querySelector('edit-runner:nth-child(' + (i + 1) + ')');
-                currentRun.value.runners[i].name = editRunnerEl.$.nameInput.value;
-                currentRun.value.runners[i].stream = editRunnerEl.$.streamInput.value
-            }
-
-            var runners = currentRun.value.runners;
-            var concatenatedRunners;
-            if (runners.length === 1) {
-                concatenatedRunners = runners[0].name;
-            } else {
-                concatenatedRunners = runners.reduce(function(prev, curr) {
-                    if (typeof prev === 'object') {
-                        return prev.name + ', ' + curr.name;
-                    } else {
-                        return prev + ', ' + curr.name;
-                    }
-                });
-            }
-
-            currentRun.value.concatenatedRunners = concatenatedRunners;
+            //Removed runners code
         });
     </script>
 </body>
